k8s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: building-management-service
spec:
  selector:
    app: building-management
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
