k8s-deployment/apigateway-config.yaml
apiVersion: apigatewayv2.services.k8s.aws/v1alpha1
kind: Route
metadata:
  name: resident-route
spec:
  apiRef:
    from:
      name: building-management-api
  routeKey: "GET /residents"
  targetRef:
    from:
      name: resident-integration
